Correção de bug no carver task. Inclusão de novo tipo de assinatura na configuração de carvers.